# omi

./: .cross-review-verify.json  .cursorignore  .dockerignore  .editorconfig  .env.example  .envrc.example  .gitattributes  .gitignore  .gitmodules  .impeccable.md  .powershell_profile.ps1  .pr-body.md  .pr-body.release-evidence-10082.md  .pre-commit-config.yaml  .prettierignore  .replit  .secrets.baseline  .vector-test  AGENTS.md  AUTHENTICATION_SECURITY_FIXES.md  BATTERY_OPTIMIZATION_PR.md  CHANGELOG.md  CHAT_PULSE_FEATURE.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_NOTES.md  ENHANCED_DIARIZATION_PR.md  ENV_FILES_GUIDE.md  HANDOFF-exports-after-import.md  History.txt  IMPROVEMENTS.md  ISSUE_TRIAGE_GUIDE.MD  LICENSE  LIMITLESS_CODE_REVIEW.md  LIMITLESS_IMPLEMENTATION_SUMMARY.md  LIMITLESS_MIGRATION_GUIDE.md  LIMITLESS_README.md  LIMITLESS_SETUP.md  MICROPHONE_MUTE_FEATURE.md  (+89 more)
Friend/firmware/firmware_v1.5/: CMakeLists.txt  client.py  prj.conf  xiao_ble.overlay
desktop/: .auto-release-trigger  .dockerignore  .env.example  .gitignore  .release-trigger  CHANGELOG.json  CLAUDE.md  Cargo.toml  PLAN.md  README.md  build-local-prod.sh  build.sh  clean.sh  dev.sh  distribute.sh  namecheap_current_state.md  omi_icon.icns  release-remote.sh  release.sh  reset-and-run.sh  run-local.sh  run.sh  sync-focus-monitor.sh  verify-release.sh  watch.sh
desktop-v2/src-tauri/: Cargo.toml  Info.plist  dev.entitlements  tauri.conf.json
desktop-v2/src-tauri/capabilities/: default.json
desktop-v2/src-tauri/icons/: icon.icns
desktop-v2/src-tauri/src/: feature_flags.rs  main.rs
desktop/.claude/skills/: remotion-best-practices
desktop/.github/workflows/: search-coverage.yml  (+1 more)
desktop/Auth-Python/: .env.example  README.md  main.py  requirements.txt
desktop/Backend-Rust/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.coolify  docker-compose.yml  docker-entrypoint.sh  run.sh
desktop/Desktop/: Info.plist  Omi-Release.entitlements  Omi.entitlements  Omi.release.entitlements  Package.swift  embedded.provisionprofile
desktop/Linux/: .gitignore  PLAN-LINUX.md  README.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
desktop/acp-bridge/: package-lock.json  package.json  tsconfig.json
desktop/agent/: package-lock.json  package.json
desktop/agent-bridge/: package-lock.json  package.json
desktop/agent-cloud/: .gitignore  agent.mjs  package-lock.json  package.json  test-agent.mjs
desktop/agent-runtime-rust/: Cargo.toml
desktop/codex-proxy/: Cargo.toml  README.md  e2e_smoke.sh
desktop/demo/: package-lock.json  package.json
desktop/dmg-assets/: dmgbuild_settings.py
desktop/docs/: M0-deliver-report.md  M4-decisions.md  M4-revised-scope.md  M4-web-frontend-audit.md  REGOLO_INTEGRATION.md  headless-ui-automation-research.md  regolo-probes.md
desktop/e2e/: SKILL.md  e2e-helpers.sh  feature-vector.md  flow1-app-navigation.sh  flow2-language-settings.sh  runner.py
desktop/eval-results/: baseline-run1-rate-limited.jsonl  baseline-run2-clean.jsonl  baseline-run3.jsonl  baseline-run4-with-tokens.jsonl  baseline-run5-extended.jsonl  eval.py
desktop/linux/: .env.example  AGENTS.md  CHANGELOG.md  README.md  SCREEN_RECORDING_SETUP.md  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  signmt-headers.txt  signmt-inspect.txt  soul.md
desktop/local-asr-addon/: build_dev_fixture.sh  build_model_artifact.sh  build_runtime_artifact.sh
desktop/local-asr-helper/: Cargo.toml  README.md  local_background_asr_harness.py
desktop/local-backend/: .gitignore  Cargo.toml  README.md
desktop/macos/: .auto-release-trigger  .gitignore  AGENTS.md  CHANGELOG.json  CLAUDE.md  README.md  run.sh  test.sh
desktop/pi-mono-extension/: index.test.ts  index.ts  package.json
desktop/scripts/: omi-ctl  prepare-agent-runtime.sh
desktop/shared-rust/: Cargo.toml
desktop/tests/: test_plist_injection.sh
desktop/windows/: .env.example  .gitattributes  .gitignore  LINUX.md  README.md  TRACK1_REMAINING_SOURCE_TRACE.md  TRACK1_SUBMISSION_CHECKLIST.md  TRACK1_SWIFT_PARITY.md  dev-app-update.yml  electron-builder.config.mjs  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.node.tsbuildinfo  tsconfig.web.tsbuildinfo  vite.tauri.config.ts  vitest.config.ts
firmware/: CMakeLists.txt  prj.conf  readme.md
firmware/Friend/: readme.md
firmware/Release/: zephyr.uf2
firmware/bootloader/: xiao_nrf52840_ble_sense_bootloader-0.8.3_s140_7.3.0.hex
firmware/firmware_v1.0/: CMakeLists.txt  CMakePresets.json  dts.overlay  overlay-xiao_ble_sense.dts  prj.conf  xiao_ble_sense.overlay  zephyr.uf2
firmware/firmware_v1.5/: prj.conf
firmware/last firmware/: prj_bubble_pcm.conf
firmware/src/: codec.c  codec.h  transport.c  utils.h
mcp/: .env.template  Dockerfile  LICENSE  README.md  maintain.README.md  pyproject.toml  release.sh
mcp/backend/: .env.example  README.md  requirements.txt  start_mcp.py
mcp/examples/: README.md  app.py  dspy_ex.py  langchain_ex.py  openai_agents_sdk_ex.py  requirements.txt  run_langchain_agent.py
mcp/supabase/: 001_google_tokens.sql  002_github_tokens.sql
mcp/tests/: test_search_conversations.py  test_server.py
omi-memory-manager/: .gitignore  pyproject.toml
omi-memory-manager/omi_manager/: __init__.py  cli.py  client.py  config.py  display.py  web.py
omi-windows/: Cargo.toml  README.md  check_out.txt
plugins/omi-plugin-sdk/: README.md  pyproject.toml
sdks/example-backend/: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
sdks/example-relay/: main.py  pyproject.toml
sdks/example-satellite/: README.md  main.py  omi_vad_satellite.py  pyproject.toml
sdks/python/: .gitignore  README.md  ble_scan_test.py  main.py  pyproject.toml  release.sh  requirements.txt  run_with_key.sh  scan.py  trigger_ble_prompt.py  wymain.py
sdks/python-cli/: .gitignore  LICENSE  README.md  pyproject.toml  release.sh
(+18798 files in other folders)
