[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-omi"
dynamic = ["version"]
description = 'Model Context Protocol Server for Omi AI'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["omi", "mcp"]
authors = [
  { name = "Joan Cabezas", email = "joan.santiago.cabezas@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/BasedHardware/omi/mcp/#readme"
Issues = "https://github.com/BasedHardware/omi/issues"
Source = "https://github.com/BasedHardware/omi/mcp"

[tool.hatch.version]
path = "src/mcp_server_omi/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]