[workspace]
resolver = "2"
members = [
    "crates/omi-app",
    "crates/omi-capture",
    "crates/omi-audio",
    "crates/omi-ble",
    "crates/omi-db",
    "crates/omi-transcription",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
