[package]
name = "nooto-desktop-v2"
version = "0.1.0"
edition = "2021"
description = "Nooto — cross-platform desktop companion"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json"] }
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
regex = "1"
base64 = "0.22"
sha2 = "0.10"
libc = "0.2"
url = "2"
dotenvy = "0.15"
sysinfo = { version = "0.32", default-features = false, features = ["system"] }
btleplug = "0.11"
futures = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }

# Embedded backend — the existing Rust backend as a library crate
nooto-desktop-backend = { path = "../../desktop/Backend-Rust" }

# Plugins
tauri-plugin-audio-capture = { path = "plugins/tauri-plugin-audio-capture" }
tauri-plugin-screen-capture = { path = "plugins/tauri-plugin-screen-capture" }
tauri-plugin-tts = { path = "plugins/tauri-plugin-tts" }
tauri-plugin-http = "2.5.8"
chrono = { version = "0.4.44", features = ["serde"] }
rdev = "0.5"
arboard = "3"
enigo = "0.2"
notify-rust = "4"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
core-graphics = "0.24"
objc2 = "0.6"
objc2-foundation = { version = "0.3" }
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSWindow", "NSScreen", "NSResponder"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Vendored fork of rdev 0.5.3 with the macOS event-tap callback patched to
# stop calling `TSMGetInputSourceProperty` from a non-main thread, which
# SIGTRAPs the process on macOS 14+ via `dispatch_assert_queue_fail`.
# See `vendor/rdev/src/macos/common.rs` for the patch.
[patch.crates-io]
rdev = { path = "vendor/rdev" }
