[package]
name = "omi-agent-runtime-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
futures = "0.3"
rx4 = { version = "=0.3.13", default-features = false, features = ["providers"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex.workspace = true

[lints.clippy]
unwrap_used = "deny"
