[package]
name = "omi-codex-proxy"
version = "0.1.0"
edition = "2021"
description = "Minimal loopback proxy: OpenAI chat/completions ↔ ChatGPT Codex /responses"
license = "MIT"

[dependencies]
axum = { version = "0.8", default-features = false, features = ["http1", "json", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
