[package]
name = "omi-desktop-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Platform-neutral Omi desktop policy and wire types"

[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
required-features = ["uniffi-bindgen"]

[features]
uniffi-bindgen = []

[lints.clippy]
unwrap_used = "deny"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
eqswift = "0.1.1"
uniffi = "0.31"
