[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "omi-plugin-sdk"
version = "0.1.0"
description = "Shared Omi plugin webhook models and small integration primitives."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0.0"]

[tool.setuptools.packages.find]
where = ["src"]
