[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omi-sdk"
version = "0.1.0"
description = "Python SDK for Omi wearable device"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Omi Community", email = "support@omi.me"},
    {name = "Tae", email = "0xkevtae@gmail.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Communications",
    "Topic :: System :: Hardware",
]
keywords = ["omi", "bluetooth", "audio", "transcription", "deepgram", "wearable"]
requires-python = ">=3.10"
dependencies = [
    "aenum==3.1.15",
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "anyio==4.9.0",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "bleak==0.22.3",
    "certifi==2025.1.31",
    "dataclasses-json==0.6.7",
    "deepgram-sdk==2.12.0",
    "deprecation==2.1.0",
    "exceptiongroup==1.2.2",
    "frozenlist==1.5.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "marshmallow==3.26.1",
    "multidict==6.2.0",
    "mypy-extensions==1.0.0",
    "opuslib==3.0.1",
    "packaging==24.2",
    "propcache==0.3.0",
    "pyobjc-core==10.3.2",
    "pyobjc-framework-Cocoa==10.3.2",
    "pyobjc-framework-CoreBluetooth==10.3.2",
    "pyobjc-framework-libdispatch==10.3.2",
    "sniffio==1.3.1",
    "typing-inspect==0.9.0",
    "typing_extensions==4.12.2",
    "websockets>=10.0",
    "yarl==1.18.3",
]

[project.urls]
"Homepage" = "https://www.omi.me/"
"Repository" = "https://github.com/BasedHardware/omi"
"Documentation" = "https://docs.omi.me/doc/developer/sdk/python"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
]

[project.scripts]
omi-scan = "omi.bluetooth:print_devices"

[tool.setuptools.packages.find]
where = ["."]
include = ["omi*"]

[tool.setuptools.package-data]
omi = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true