[package]
name = "omi-tauri"
version = "1.0.0"
description = "Omi desktop Tauri transition host"
authors = ["Based Hardware"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
futures-util = "0.3"
getrandom = "0.3"
keyring = "3.6"
omi-desktop-core = { path = "../../shared-rust" }
omi-agent-runtime = { path = "../../agent-runtime-rust" }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-notification = "2.3.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "process", "sync", "time"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSApplication", "NSPanel", "NSScreen", "NSView", "NSWindow"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSGeometry", "objc2-core-foundation"] }

[lints.clippy]
all = "warn"
