[package]
name = "omi-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "omi"
path = "src/main.rs"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "router"] }
dioxus-free-icons = { version = "0.9", features = ["lucide"] }
aes-gcm = "0.10"
sha1 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }


# Workspace deps
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Auth + config
webbrowser = "0.8"
urlencoding = "2.1"
dotenvy = "0.15"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Global hotkeys & system tray (M7)
global-hotkey = "0.6"
tray-icon = "0.19"

# Audio playback for TTS
rodio = { version = "0.20", default-features = false, features = ["mp3"] }

# Windows Toast notifications
winrt-notification = "0.5"

# Temporary files for TTS audio
tempfile = "3"

# Clipboard monitoring + file indexing
clipboard-win = "5"
walkdir = "2"

# Sibling crates
omi-capture = { path = "../omi-capture" }
omi-audio = { path = "../omi-audio" }
# omi-ble = { path = "../omi-ble" }  # disabled — heavy btleplug deps
omi-db = { path = "../omi-db" }
omi-transcription = { path = "../omi-transcription" }
