[package]
name = "omi-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
xcap = "0.0.14"
base64 = "0.22"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Media_Ocr",
    "Globalization",
    "Storage",
    "Storage_Streams",
    "Graphics_Imaging",
] }
